fix(pager): select value in adaptive pager has wrong vertical alignment in Safari

--- a/packages/default/scss/input/_layout.scss
+++ b/packages/default/scss/input/_layout.scss
@@ -91,6 +91,7 @@
         padding-block: $kendo-input-padding-y;
         padding-inline: $kendo-input-padding-x;
         appearance: auto;
+        align-items: center;
 
         &:disabled,
         &[disabled] {
